@@ -6,6 +6,7 @@
     * Fixed undirectional furnaces being invisible
     * Fixed error causing double wooden slabs to render as single slabs
     * Improved command-line error checking
+    * Added command-line option to override SPP target in headless mode
 
 1.1.8 - 2013-03-27
     * Chunky now exits after completing a render in command-line mode
